--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "debug": "^2.6.9",
     "ejs": "^2.7.4",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "http-errors": "^1.6.3",
     "mongoose": "^5.10.3",
     "morgan": "^1.9.1",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
